# gradient-ascent-atc

./: .gitignore  Dockerfile  README.md  demo.py  inference.py  live_dashboard.html  openenv.yaml  pyproject.toml  requirements.txt  validate_local.py
.sisyphus/: boulder.json
.sisyphus/drafts/: gatwick-ground-control-openenv-revision.md
.sisyphus/plans/: atc-ground-control-rl-environment.md
data/: dummy_small.json  egkk_gatwick.json
samplematerial/: sampleinference.py
src/: __init__.py  airport_schema.py  api.py  benchmark.py  models.py  openenv_environment.py  phraseology.py  physics.py  protocol.py  rewards.py  state_machine.py
src/server/: Dockerfile  __init__.py  app.py  requirements.txt
src/tasks/: __init__.py  arrival.py  departure.py  integrated.py  peak_traffic.py  registry.py
src/visualizer/: __init__.py  viewer.py
tests/: conftest.py  helpers.py  smoke_docker.py  test_airport_schema.py  test_api.py  test_arrival_task.py  test_benchmark_integration.py  test_departure_task.py  test_determinism.py  test_inference.py  test_integrated_task.py  test_model_contracts.py  test_openenv_integration.py  test_phraseology.py  test_physics.py  test_protocol.py  test_repo_structure.py  test_rewards.py  test_runtime_budget.py  test_scaffold_contract.py  test_state_machine.py  test_tasks.py  test_visualizer.py
