[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradient-ascent-atc"
version = "0.1.0"
description = "Gradient Ascent — ATC Ground Control RL Environment. Full lifecycle airport ground control benchmark powered by LLM orchestration."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "openenv-core>=0.2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.12",
    "httpx>=0.27",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
